# moteOS

./: .gitignore  AARCH64_CROSS_COMPILATION.md  COMPONENT_INTEGRATION_SUMMARY.md  CONST_FIX_SUMMARY.md  Cargo.toml  DARK_THEME_IMPLEMENTATION.md  DEMO.md  IMPLEMENTATION_SUMMARY.md  KERNEL_IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  REVIEW_RESPONSE.md  RUN_DEMO.md  TEST_RESULTS.md  TLS_IMPLEMENTATION_SUMMARY.md  linker-aarch64.ld  run-qemu  run-qemu-aarch64.sh  run-qemu.sh
.cargo/: config.toml
.github/workflows/: qemu-boot.yml
boot/: Cargo.toml
boot/src/: framebuffer.rs  interrupts.rs  lib.rs  memory.rs  timer.rs  uefi_bin.rs
boot/src/bios/: mod.rs
boot/src/uefi/: aarch64.rs  mod.rs  x86_64.rs
config/: Cargo.toml  WIZARD_README.md
config/src/: crypto.rs  error.rs  lib.rs  toml.rs  types.rs  wizard.rs
config/src/storage/: efi.rs  mod.rs
docs/: AGENT_WORK_DIVISION.md  BUILD_AND_TEST_GUIDE.md  CHANGES.md  CODE_REVIEW_GUIDE.md  COMPILATION_ISSUES.md  CURSOR_MCP_SETUP.md  DEPENDENCY_MANAGEMENT.md  DNS_IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  ISO_GENERATION.md  ISO_IMPLEMENTATION_SUMMARY.md  PROJECT_OBSERVATIONS.md  REVIEW_FIXES_SUMMARY.md  SAFE_REVIEW_PROCESS.md  TECHNICAL_SPECIFICATIONS.md  TENSOR_OPERATIONS_SUMMARY.md  TESTING_PLAN.md  TESTING_QUICKSTART.md  TLS_TESTING.md  TLS_TEST_IMPLEMENTATION.md  VIBE_KANBAN_API.md  moteOS-PRD.md
font/: Cargo.toml  build.rs
font/examples/: simple.rs
font/src/: lib.rs  psf.rs
inference/: Cargo.toml  README.md
inference/src/: error.rs  gguf.rs  lib.rs  model.rs  ops.rs  sampling.rs  tensor.rs  tokenizer.rs  transformer.rs
inference/src/simd/: aarch64.rs  generic.rs  mod.rs  x86_64.rs
iso/: NvVars  startup.nsh
iso-aarch64/rpi/: README.md  config.txt
kernel/: Cargo.toml  README.md
kernel/src/: event_loop.rs  init.rs  input.rs  lib.rs  ps2.rs  screen.rs  serial.rs  tls_test.rs
llm/: Cargo.toml
llm/src/: error.rs  lib.rs  streaming.rs  types.rs
llm/src/providers/: anthropic.rs  groq.rs  mod.rs  openai.rs  openai_compat.rs  xai.rs
network/: Cargo.toml  DHCP_IMPLEMENTATION.md  README.md  TLS_README.md
network/examples/: basic_usage.rs  dhcp_usage.rs  dns_usage.rs  test_tls_https.rs  tls_https.rs
network/src/: dhcp.rs  dns.rs  error.rs  http.rs  lib.rs  stack.rs  tls.rs
network/src/drivers/: interrupts.rs  mod.rs  virtio.rs
network/src/pci/: mod.rs
shared/: Cargo.toml
shared/src/: allocator.rs  boot_info.rs  framebuffer.rs  lib.rs  memory.rs  timer.rs
tools/: build-iso-aarch64.sh  build-iso-bios.sh  build-iso-uefi.sh  check-dependencies.sh  create-vk-tasks.js  download-ovmf.sh  generate-review-checklist.sh  make-usb-fat.sh  review-prompt-template.md  review-task.sh  run-all-tests.sh  test-api.sh  test-boot-aarch64.sh  test-boot.sh  test-build-aarch64.sh  test-network.sh  test-tls.sh  write-usb.sh
tui/: COLOR_REFERENCE.md  Cargo.toml  README.md
tui/examples/: input_demo.rs  simple.rs  theme_showcase.rs
tui/src/: colors.rs  font.rs  framebuffer.rs  lib.rs  screen.rs  theme.rs  types.rs  widget.rs
tui/src/screens/: chat.rs  mod.rs
tui/src/widgets/: input.rs  message.rs  mod.rs
tui/tests/: color_rendering.rs  const_evaluation.rs
