[workspace]
members = [
    "boot",
    "network",
    "llm",
    "inference",
    "config",
    "shared",
    "tui",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["moteOS Contributors"]
license = "MIT"
repository = "https://github.com/moteos/moteos"
homepage = "https://moteos.org"
documentation = "https://docs.moteos.org"
description = "Ultra-lightweight AI-native unikernel operating system"

[workspace.dependencies]
# Core no_std dependencies
spin = "0.9"
linked_list_allocator = "0.10"

# Serialization (no_std compatible)
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Logging
log = { version = "0.4", default-features = false }

# Error handling
thiserror = { version = "1.0", default-features = false }

# UEFI boot
uefi = { version = "0.27", default-features = false, features = ["alloc"] }

# CPU abstractions
x86_64 = { version = "0.14", default-features = false, features = ["instructions"] }

# Network stack
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "socket-icmp", "socket-dhcpv4", "socket-dns"] }

# TLS (may require std, but include for workspace)
rustls = { version = "0.23", default-features = false }

# Common utilities
heapless = { version = "0.8", default-features = false }

# Math operations (for inference)
micromath = "2.1"

# Hash functions (for WPA2, crypto)
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.12", default-features = false }

# AES (for WPA2 CCMP, encryption)
aes = { version = "0.8", default-features = false }
aes-gcm = { version = "0.10", default-features = false }

# JSON parsing (for API clients)
miniserde = { version = "0.1", default-features = false }

# Workspace profile for release builds
[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller panic handler

# Workspace profile for dev builds
[profile.dev]
opt-level = 0
debug = true
