[package]
name = "boot"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
# Workspace dependencies
uefi = { workspace = true }
x86_64 = { workspace = true }
linked_list_allocator = { workspace = true }
spin = { workspace = true }
shared = { path = "../shared" }
