[package]
name = "boot"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

# Binary target for UEFI boot
[[bin]]
name = "boot"
path = "src/uefi_bin.rs"
test = false

[dependencies]
# Workspace dependencies
uefi = { workspace = true }
linked_list_allocator = { workspace = true }
spin = { workspace = true }
shared = { path = "../shared" }
kernel = { path = "../kernel", default-features = false, features = ["uefi-minimal"] }

# Architecture-specific dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { workspace = true }

[features]
default = ["kernel-linked"]
kernel-linked = []
