[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core no_std dependencies
spin = { workspace = true }
linked_list_allocator = { workspace = true }

# Logging
log = { workspace = true }

# Internal dependencies
boot = { path = "../boot" }
shared = { path = "../shared" }
network = { path = "../network" }
config = { path = "../config" }
llm = { path = "../llm" }

# Serialization for heapless types
heapless = { workspace = true }

[lib]
name = "kernel"
path = "src/lib.rs"
