[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core no_std dependencies
spin = { workspace = true }
linked_list_allocator = { workspace = true }

# Logging
log = { workspace = true }

# Internal dependencies
shared = { path = "../shared" }
network = { path = "../network", optional = true }
config = { path = "../config", optional = true }
llm = { path = "../llm", optional = true }
tui = { path = "../tui" }

# Serialization for heapless types
heapless = { workspace = true }

[lib]
name = "kernel"
path = "src/lib.rs"

[features]
default = ["full"]
full = ["network", "llm", "config"]
uefi-minimal = []
