[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core no_std dependencies
spin = { workspace = true }

# Logging
log = { workspace = true }
smoltcp = { workspace = true }

# Internal dependencies
shared = { path = "../shared" }
network = { path = "../network", optional = true, default-features = false }
config = { path = "../config", optional = true }
llm = { path = "../llm", optional = true, default-features = false }
tui = { path = "../tui", optional = true }

# Serialization for heapless types
heapless = { workspace = true }

[lib]
name = "kernel"
path = "src/lib.rs"

[features]
default = ["full"]
full = ["network", "llm", "config", "tui"]
full-tls = ["full", "network/tls", "llm/tls"]
uefi-minimal = []
uefi-full = ["full"]
