[package]
name = "network"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = []
tls = []

[dependencies]
# Workspace dependencies
spin = { workspace = true }
smoltcp = { workspace = true }

# For virtio
volatile = "0.5"

# TLS 1.3 support
embedded-tls = { version = "0.17", default-features = false }
embedded-io = { version = "0.6", default-features = false }

# Cryptography (required by embedded-tls)
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rand_core = { version = "0.6", default-features = false }
heapless = "0.8"

# For certificate verification
webpki = { version = "0.22", default-features = false, features = ["alloc"] }
webpki-roots = { version = "0.26", default-features = false }
x509-parser = { version = "0.16", default-features = false, features = ["verify"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { workspace = true }
